updated final scene and font on youre dead scene. Also added ATK with Fists.

--- a/Intro.resx
+++ b/Intro.resx
@@ -118,11 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TxtBox1.Text" xml:space="preserve">
-    <value>The smell of charred oak and fire fill the air. You hear the faint screams of the villagers around you. There was nothing you could have done. You tried. You just couldn't save her in time. 
-He got her, and you saw it happen before he knocked you out. But how did he do it? He was so fast. At a glance he was at the front door, smiling with his razor sharp teeth at her. She screamed, you jumped up with "Hel Fire" in hand. 
-Blood shot everywhere. Then you awoke to an empty room. What went wrong? Where is she? Who was he? The whole house was a wreck, say the toy your father gave you.</value>
+    <value>Your mother’s dead. You saw it happen when you were a child. 
+Your father died by his hand defending your mother. 
+You hid in the corner in the shadows curled with your stuffed doll. 
+Oddly enough it looked just like him. It WAS him. 
+The pendant on his neck glowed bright red just as the doll’s did. 
+ It never has done that before. When you looked up, he was gone, and so was the glow on your doll’s pendant. </value>
   </data>
   <data name="TxtBox2.Text" xml:space="preserve">
-    <value>It was a little creature that had pointy ears and two pointy teeth. It was made of a soft fabric and had a beautiful ruby neckalce around his neck. "His name is Tahdrs, take good care of him and protect him. He'll be very helpful to you someday." You could hear your father's voice in your head as you look down at Tahdrs without a scratch on him. The only thing that you had left of your father was in your hand now. And now your mother is gone. As you squeeze Tahdrs tight you notice the pendant glowing now. What is this magic? It's getting redder, and it's brighter!</value>
+    <value>After 25 years, you heard the rumors that he was back. 
+In the mountains just East of Senthor in a mansion. 
+Apprenticing as a blacksmith for 25 years, it was time for a change. 
+Heading East with your father’s sword, ‘Hel Fire’, you knew what you had to do. 
+It was time for revenge</value>
+  </data>
+  <data name="TxtBox3.Text" xml:space="preserve">
+    <value>Along your journey you come to the gates of the mansion. 
+You see a goblin guarding the gate.
+You startle a flock of bats in the trees. 
+The goblin sees you, yelling out 
+“ He waits for you. Master knew you would come. He NEEDS YOU!”, as he lunges toward you with his rusty dagger.</value>
   </data>
 </root>
