--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,8 +121,17 @@
   <data name="dark_castle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dark_castle.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Loopable_A_2020_09_15___Brutality___David_Fesliyan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Loopable-A-2020-09-15_-_Brutality_-_David_Fesliyan.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Loopable_B_2020_09_15___Brutality___David_Fesliyan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Loopable-B-2020-09-15_-_Brutality_-_David_Fesliyan.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="punch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\punch.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Short_Stinger_2020_09_15___Brutality___David_Fesliyan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Short-Stinger-2020-09-15_-_Brutality_-_David_Fesliyan.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="strahdcastle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\strahdcastle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
